--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+# General
+.DS_Store
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -25,6 +28,7 @@ share/python-wheels/
 .installed.cfg
 *.egg
 MANIFEST
+setup.py
 
 # PyInstaller
 #  Usually these files are written by a python script from a template
